deployment-version1.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
 name: my-deployed-website
 labels: 
  app: myweb
  version: v1
spec:
 replicas: 1
 template:
  metadata:
   name: my-nginx
   labels:
    tier: tier1
  spec:
   containers:
    - name: nginx
      image: nginx
 selector:
  matchLabels:
   tier: tier1
