deployment-version2.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
 name: my-deployed-website2
 labels: 
  app: myweb
  version: v2
spec:
 replicas: 1
 template:
  metadata:
   name: my-nginx2
   labels:
    tier: tier2
  spec:
   containers:
    - name: nginx
      image: nginx
 selector:
  matchLabels:
   tier: tier2
