pod1.yaml
apiVersion: v1
kind: Pod
metadata:
 name: my-nginx
 labels:
  tier: tier1
spec:
 containers:
  - name: nginx
    image: nginx
