pod2.yaml
apiVersion: v1
kind: Pod
metadata:
 name: my-nginx2
 labels:
  tier: tier2
spec:
 containers:
  - name: nginx
    image: nginx
