servicef.yaml
apiVersion: v1
kind: Service
metadata:
 name: myweb 
 labels:
  name: myweb
  app: myweb
spec:
 type: LoadBalancer
 ports:
 - port: 80
   targetPort: 80
 selector:
   app: myweb
