istio-destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myweb 
spec:
  host: myweb 
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
