istio-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myweb 
spec:
  hosts:
    - myweb 
  http:
  - route:
    - destination:
        host: myweb 
        subset: v1
      weight: 90
    - destination:
        host: myweb 
        subset: v2
      weight: 10
